--- a/Source/Panama/View/EditControls/ConfigEditColor.xaml
+++ b/Source/Panama/View/EditControls/ConfigEditColor.xaml
@@ -5,12 +5,11 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
     xmlns:con="clr-namespace:Restless.App.Panama.Controls"
-    xmlns:local="clr-namespace:Restless.App.Panama.View"
+    xmlns:r="clr-namespace:Restless.App.Panama.Resources"
     mc:Ignorable="d" 
     d:DesignHeight="300" d:DesignWidth="600">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="Auto"/>
@@ -48,9 +47,10 @@
                 <Setter Property="Margin" Value="0,2,0,8"/>
             </Style>
         </Grid.Resources>
+        <!-- Header -->
         <TextBlock Grid.Row="0" Grid.Column="1" Text="Foreground" HorizontalAlignment="Center"/>
         <TextBlock Grid.Row="0" Grid.Column="2" Text="Background" HorizontalAlignment="Center"/>
-        <Separator Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="5"/>
+        <Separator Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3"/>
 
 
         <TextBlock Grid.Row="2" Text="Published Title"/>
@@ -72,7 +72,7 @@
         <TextBlock Grid.Row="6" Text="Alternation"/>
         <con:ColorPicker Grid.Row="6" Grid.Column="2" SelectedColor="{Binding Config.Colors.DataGridAlternation.Background}" ColorSortingMode="{Binding ColorSortingMode}"/>
 
-        <Button Grid.Row="7" Content="Reset" Command="{Binding Commands[ResetColors]}"/>
+        <Button Grid.Row="7" Content="Reset" Command="{Binding Commands[ResetColors]}" ToolTip="{x:Static r:Strings.TooltipColorReset}"/>
         <ItemsControl Grid.Row="8" Grid.ColumnSpan="3" Style="{StaticResource ItemsControlSubSelection}" ItemsSource="{Binding ColorSortingModes}"/>
     </Grid>
 </UserControl>
