--- a/Source/Panama/View/TitleView.xaml
+++ b/Source/Panama/View/TitleView.xaml
@@ -59,14 +59,14 @@
         <!-- Splitter -->
         <GridSplitter Grid.Row="1" Grid.Column="1" Style="{StaticResource GridSplitterVertical}" />
 
-        <ScrollViewer Grid.Row="0" Grid.Column="2" Grid.RowSpan="2" Margin="0,0,0,3" VerticalScrollBarVisibility="Auto">
-            <DockPanel>
-                <Expander DockPanel.Dock="Top" Header="Row Filter Options" IsExpanded="False">
-                    <view:TitleFilter Margin="4,12,4,0"/>
-                </Expander>
-                <view:TitleEditWithTab DockPanel.Dock="Top" Margin="0,4,0,0" Visibility="{Binding EditVisibility}"/>
-            </DockPanel>
-        </ScrollViewer>
+
+        <DockPanel Grid.Row="0" Grid.Column="2" Grid.RowSpan="2">
+            <Expander DockPanel.Dock="Top" Header="Row Filter Options" IsExpanded="False">
+                <view:TitleFilter Margin="4,6"/>
+            </Expander>
+            <view:TitleEditWithTab DockPanel.Dock="Top" Margin="6,6" Visibility="{Binding EditVisibility}"/>
+        </DockPanel>
+
     </Grid>
     <!-- end main grid-->
 </UserControl>
