--- a/Source/Panama/View/SubmissionView.xaml
+++ b/Source/Panama/View/SubmissionView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl 
+﻿<UserControl
     x:Class="Restless.App.Panama.View.SubmissionView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -42,9 +42,8 @@
         <GridSplitter Grid.Row="1" Grid.Column="1" Style="{StaticResource GridSplitterVertical}" />
 
         <!-- Nested editing control on the right -->
-        <ScrollViewer Grid.Row="1" Grid.Column="2" VerticalScrollBarVisibility="Auto">
-            <view:SubmissionEditWithTab Visibility="{Binding EditVisibility}"/>
-        </ScrollViewer>
+        <view:SubmissionEditWithTab Grid.Row="1" Grid.Column="2" Margin="4,3,4,6" Visibility="{Binding EditVisibility}"/>
+
     </Grid>
     <!-- end main grid-->
 </UserControl>
