--- a/Source/Panama/View/Windows/PublisherSelectWindow.xaml
+++ b/Source/Panama/View/Windows/PublisherSelectWindow.xaml
@@ -4,10 +4,10 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:view="clr-namespace:Restless.App.Panama.View"
     xmlns:con="clr-namespace:Restless.App.Panama.Controls"
-    Height="440" Width="520" ShowInTaskbar="False" ResizeMode="NoResize"
+    Height="460" Width="520" ShowInTaskbar="False" ResizeMode="NoResize"
     WindowStartupLocation="CenterOwner">
     
-    <Grid>
+    <Grid Margin="0,8">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="112"/>
@@ -21,7 +21,5 @@
 
         <!-- Main data grid to display the tabular data  -->
         <con:DataGridExtended Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"  ItemsSource="{Binding Path=MainSource.View}" SelectedItem="{Binding SelectedItem}" con:DataGridColumns.Columns="{Binding Columns}"/>
-
-
     </Grid>
 </Window>
