--- a/Source/Panama/Resources/Dictionary/Border.xaml
+++ b/Source/Panama/Resources/Dictionary/Border.xaml
@@ -2,4 +2,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
+    <Style x:Key="BorderGridContainer" TargetType="Border">
+        <Setter Property="Padding" Value="6"/>
+    </Style>
+
 </ResourceDictionary>
