--- a/Source/Panama/Resources/Dictionary/ItemsControl.xaml
+++ b/Source/Panama/Resources/Dictionary/ItemsControl.xaml
@@ -16,7 +16,17 @@
                         </Style>
                     </Image.Style>
                 </Image>
-                <TextBlock Text="{Binding Path=DisplayName}" FontSize="{Binding FontSize}" Margin="5,0"  VerticalAlignment="Center"/>
+                <TextBlock Text="{Binding Path=DisplayName}" FontSize="{Binding FontSize}" Margin="5,0"  VerticalAlignment="Center">
+                    <TextBlock.Style>
+                        <Style TargetType="TextBlock">
+                            <Style.Triggers>
+                                <Trigger Property="IsEnabled" Value="False">
+                                    <Setter Property="Opacity" Value="0.5" />
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </TextBlock.Style>
+                </TextBlock>
             </StackPanel>
         </Button>
     </DataTemplate>
